# port-liblzma

./: all_cves.json  dependents.json  test-original.sh
safe/: Cargo.toml  SAFETY.md  build.rs
safe/abi/: linux_symver_aliases.S
safe/debian/: changelog  copyright  liblzma-dev.install  liblzma5.install  rules
safe/docker/: dependent-test.Dockerfile
safe/fuzz/: Cargo.toml
safe/fuzz/src/: lib.rs
safe/scripts/: benchmark.sh  build-deb.sh  build-dependent-test-image.sh  check-installed-dev-package.sh  generate-test-config.sh  link-prebuilt-objects.sh  release-verify.sh  relink-release-shared.sh  run-dependent-matrix.sh  run-dependent-smokes.sh  run-extra-c-tests.sh  run-rust-unit-tests.sh  run-upstream-c-tests.sh  run-upstream-shell-tests.sh  sync-upstream-headers.sh  sync-upstream-tests.sh
safe/src/: lib.rs
safe/src/ffi/: mod.rs  stubs.rs  types.rs
safe/src/internal/: common.rs  hardware.rs  preset.rs  stream_flags.rs  stream_state.rs  upstream.rs  vli.rs
safe/src/internal/block/: buffer.rs  coder.rs  header.rs  mod.rs
safe/src/internal/check/: crc32.rs  crc64.rs  mod.rs  sha256.rs
safe/src/internal/container/: alone.rs  auto.rs  easy.rs  lzip.rs  microlzma.rs  mod.rs  outqueue.rs  stream.rs  stream_buffer.rs  stream_decoder_mt.rs  stream_encoder_mt.rs
safe/src/internal/delta/: common.rs  decoder.rs  encoder.rs  mod.rs
safe/src/internal/filter/: common.rs  flags.rs  mod.rs  properties.rs  string_conv.rs
safe/src/internal/index/: core.rs  decode.rs  encode.rs  file_info.rs  hash.rs  (+2 more)
safe/tests/: abi_layout.rs
safe/tests/extra/: test_mt_api.c
(+31 files in other folders)
