[package]
name = "safe-liblzma"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "lzma"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
libc = "0.2"
lzma-rust2 = { path = "vendor/lzma-rust2", default-features = false, features = ["std", "encoder", "lzip", "xz"] }

[patch.crates-io]
libc = { path = "vendor/libc-0.2.184" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
